tests/ui/fail/unexpected_comma.rs
use macro_files::create;

fn main() {
    create!({
        "README.md",
        ".gitignore": "/target"
    });
}
